Fix some color contrast CSS issues in the docs (#135)

--- a/assets/css/_codefences.scss
+++ b/assets/css/_codefences.scss
@@ -247,5 +247,5 @@
   color: #40a070;
 } /* Literal.Number.Integer.Long */
 .highlight .p {
-  opacity: 0.6;
+  opacity: 0.7;
 }
